--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <body>
         <header>
             <ul>
-                <li><a href="">About</a></li>
-                <li><a href="">Store</a></li>
-                <li><a href="">Gmail</a></li>
-                <li><a href="">Images</a></li>
-                <li><a href=""></a></li>
-                <li><a href="">Sign in</a></li>
+                <div class="left">
+                    <li><a href="">About</a></li>
+                    <li><a href="">Store</a></li>
+                </div>
+                <div class="right">
+                    <li><a href="">Gmail</a></li>
+                    <li><a href="">Images</a></li>
+                    <li><a href="">Sign in</a></li>
+                </div>
             </ul>
         </header>
         <main>
@@ -26,12 +29,16 @@
         </main>
         <footer>
             <ul>
-                <li><a href="">Advertising</a></li>
-                <li><a href="">Business</a></li>
-                <li><a href="">How Search Works</a></li>
-                <li><a href="">Privacy</a></li>
-                <li><a href="">Terms</a></li>
-                <li><a href="">Settings</a></li>
+                <div class="right">
+                    <li><a href="">Advertising</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">How Search Works</a></li>
+                </div>
+                <div class="left">
+                    <li><a href="">Privacy</a></li>
+                    <li><a href="">Terms</a></li>
+                    <li><a href="">Settings</a></li>
+                </div>
             </ul>
         </footer>
     </body>
