--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
         <header>
             <ul>
                 <div class="left">
-                    <li><a href="">About</a></li>
-                    <li><a href="">Store</a></li>
+                    <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjRwZW115zlAhUYJzQIHbYCDcMQkNQCCAM&url=https%3A%2F%2Fabout.google%2F%3Ffg%3D1%26utm_source%3Dgoogle-US%26utm_medium%3Dreferral%26utm_campaign%3Dhp-header&usg=AOvVaw13L0SpN0L7ycx9R0_i4R2S">About</a></li>
+                    <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjRwZW115zlAhUYJzQIHbYCDcMQpMwCCAQ&url=https%3A%2F%2Fstore.google.com%2F%3Futm_source%3Dhp_header%26utm_medium%3Dgoogle_oo%26utm_campaign%3DGS100042&usg=AOvVaw0klweobGSi20iSKV1DeFH9">Store</a></li>
                 </div>
                 <div class="right">
-                    <li><a href="">Gmail</a></li>
-                    <li><a href="">Images</a></li>
-                    <li><a href="">Sign in</a></li>
+                    <li><a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a></li>
+                    <li><a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a></li>
+                    <li><a href="https://www.google.com/intl/en/about/products?tab=wh"></a></li>
+                    <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/%3Fclient%3Dsafari%26channel%3Dipad_bm">Sign in</a></li>
                 </div>
             </ul>
         </header>
@@ -30,14 +31,14 @@
         <footer>
             <ul>
                 <div class="right">
-                    <li><a href="">Advertising</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">How Search Works</a></li>
+                    <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwiwjZ_215zlAhX4GTQIHfKzAUQQkdQCCBU&url=https%3A%2F%2Fwww.google.com%2Fintl%2Fen_us%2Fads%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&usg=AOvVaw3XLzhicA5ZZW0afDbW0l2T">Advertising</a></li>
+                    <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwiwjZ_215zlAhX4GTQIHfKzAUQQktQCCBY&url=https%3A%2F%2Fwww.google.com%2Fservices%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&usg=AOvVaw2SJ4zwRVXKyZr53qG9dm4K">Business</a></li>
+                    <li><a href="https://google.com/search/howsearchworks/?fg=1">How Search Works</a></li>
                 </div>
                 <div class="left">
-                    <li><a href="">Privacy</a></li>
-                    <li><a href="">Terms</a></li>
-                    <li><a href="">Settings</a></li>
+                    <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwiwjZ_215zlAhX4GTQIHfKzAUQQ8awCCBE&url=https%3A%2F%2Fpolicies.google.com%2Fprivacy%3Ffg%3D1&usg=AOvVaw12z8DS9cd-g0Aokit_wxri">Privacy</a></li>
+                    <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwiwjZ_215zlAhX4GTQIHfKzAUQQ8qwCCBI&url=https%3A%2F%2Fpolicies.google.com%2Fterms%3Ffg%3D1&usg=AOvVaw3sEM_N0elgYQx8WbCXpj3n">Terms</a></li>
+                    <li><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwiwjZ_215zlAhX4GTQIHfKzAUQQzq0CCBM&url=https%3A%2F%2Fwww.google.com%2Fpreferences%3Fhl%3Den%26client%3Dsafari&usg=AOvVaw0EdGNytfLu01w-9rMmX_eZ">Settings</a></li>
                 </div>
             </ul>
         </footer>
