Add divs to buttons and search-bar

--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
         <main>
             <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
             <form>
-                <input type="text">
-                <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky">
+                <div class="search-bar">
+                    <input type="text">
+                </div>
+                <div class="buttons">
+                    <input type="submit" value="Google Search">
+                    <input type="submit" value="I'm Feeling Lucky">
+                </div>
             </form>
         </main>
         <footer>
