add alt attribute to img tag

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </header>
         <main>
-            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="google-logo">
             <form>
                 <div class="search-bar">
                     <input type="text">
