add blue-button and app-log id's to header

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
                 <div class="right">
                     <li><a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a></li>
                     <li><a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a></li>
-                    <li><a href="https://www.google.com/intl/en/about/products?tab=wh"></a></li>
-                    <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/%3Fclient%3Dsafari%26channel%3Dipad_bm">Sign in</a></li>
+                    <div class="right" id="app-logo">
+                        <li><a href="https://www.google.com/intl/en/about/products?tab=wh"></a></li>
+                    </div>
+                    <div class="right" id="blue-button">
+                        <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/%3Fclient%3Dsafari%26channel%3Dipad_bm">Sign in</a></li>
+                    </div>
                 </div>
             </ul>
         </header>
