--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <div class="right" id="app-logo">
                         <li><a href="https://www.google.com/intl/en/about/products?tab=wh"></a></li>
                     </div>
-                    <div class="right" id="blue-button">
-                        <li><a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/%3Fclient%3Dsafari%26channel%3Dipad_bm">Sign in</a></li>
+                    <div class="right">
+                        <li><a id="button" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/%3Fclient%3Dsafari%26channel%3Dipad_bm">Sign in</a></li>
                     </div>
                 </div>
             </ul>
