--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </header>
         <main>
-            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="google-logo">
+            <img src="images/googlelogo.png" alt="google logo" width="272px" height="92px">
             <form>
                 <div class="search-bar">
                     <input type="text">
